# Terbie

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: base.py
app/api/: routes.py
app/catalog/: data_catalog.py
app/compiler/: analytical_planner.py  compiler.py  execution_plan_builder.py  hypothesis_builder.py  models.py
app/context_resolution/: __init__.py  context_resolver.py  models.py
app/core/: config.py  context.py  dependencies.py  exceptions.py  logging.py
app/datasources/: base.py  bigquery.py  csv.py  excel.py  factory.py  google_sheets.py  models.py  postgres.py  (+2 more)
docs/: planner-specification-v1.md
terbie.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_best_campaign_flow.py  test_campaign_detail_flow.py  test_comparative_analytics.py  test_compiler.py  test_compiler_with_reasoning.py  test_composite_filters_flow.py  test_contextual_analytics.py  test_data_service.py  test_datasource_registry.py  test_datasources.py  test_entity_resolution.py  test_execution_security.py  test_executor.py  test_gemini_provider.py  test_google_sheets_datasource.py  test_health.py  test_insights.py  test_intent_guard.py  test_knowledge.py  test_logical_query_plan.py  test_metric_resolver.py  test_multi_metric_flow.py  test_narrator.py  test_objective_response_flow.py  test_orchestrator.py  test_planner.py  test_planner_compiler.py  test_promotion_listing_flow.py  test_reasoning.py  test_reasoning_factory.py  test_restaurant_ranking_flow.py  test_semantic.py  test_semantic_dictionary.py  test_semantic_kb.py  test_web_ui.py
(+131 files in other folders)
